[tool.poetry]
name = "bili-live-shield-words"
version = "20230110"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "BiliLiveAntiShield.py"},
    {include = "BiliLiveShieldWords.py"},
]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
